[package]
name = "heron_core"
version = "0.1.1"
authors = ["Jonathan Cornaz"]
edition = "2018"
license = "MIT"
description = "Core components and resources to use Heron"
repository = "https://github.com/jcornaz/heron/"

[dependencies]
bevy_math = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", default-features = false }
