[package]
name = "heron_rapier"
version = "0.1.1"
authors = ["Jonathan Cornaz"]
edition = "2018"
license = "MIT"
description = "Physics behavior for Heron, using rapier"
repository = "https://github.com/jcornaz/heron/"

[features]
default = []
2d = ["rapier2d"]
3d = ["rapier3d"]

[dependencies]
heron_core = { path = "../core", version = "^0.1.1" }
bevy_math = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_core = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_app = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_transform = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
rapier2d = { version = "^0.5.0", optional = true, features = ["simd-stable", "parallel"] }
rapier3d = { version = "^0.5.0", optional = true, features = ["simd-stable", "parallel"] }
fnv = "^1.0"
crossbeam = "^0.8.0"

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", default-features = false }
rstest = "0.6"